# PhOVS

./: CMakeHeaderFileList.cmake  CMakeLists.txt  CMakeSourceFileList.cmake  PhOVS_README.txt  README.txt
Defocus_based_DVS/: CMakeLists.txt  DDVS.cpp  DDVS_2021RAL_ICRA.cpp  DDVS_2021RAL_revision.cpp  paramCamera.ini
Defocus_based_DVS/src/: C_UR.cpp
copyContentInLibDirectory/: PhOVSBuildSettings.cmake  PhOVSConfig.cmake  PhOVSLibraryDepends.cmake  PhOVSUse.cmake
doc/: ._config-doxygen.in  config-doxygen
src/: CMakeLists.txt
src/camera/: CCameraOmniParameters.cpp  CCameraOmniParameters.h  CCameraThinLensParameters.cpp  CModel.cpp  CModel.h  COmni.cpp  COmni.h  CPerspective.cpp  CPerspective.h  CPoint.cpp  CPoint.h  commun.h
src/photometricVS/: CFeatureDefocusedLuminance.cpp  CFeatureDefocusedLuminance.h  CFeatureLuminanceOmni.cpp  CFeatureLuminanceOmni.h  CFeatureLuminanceOmniFeature.cpp  CFeatureLuminanceOmniFeatureDepth.cpp  CFeatureLuminanceOmniFeaturesd.cpp  CFeatureLuminanceOmniFeaturesdDepth.cpp  CFeatureLuminanceOmniInteractionMatrix.cpp  CFeatureLuminanceOmniNeighborhoods.cpp  CImageFilter.cpp  CImageFilter.h  CImageTools.cpp  CImageTools.h
